src/app/components/countries-list/countries-list.component.scss
:host {
    height: 100%;
    display: grid;
    grid-template-rows: 1fr 5fr;

    .upper-section {
        display: flex;
        flex-direction: row;
        justify-content: space-around;

        .section-header {
            place-self: center;
            font-size: 2em;
        }

        .search-area {
            place-self: center;
            width: 50%;
        }
    }

    .country-list-container {
        height: fit-content;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: flex-start;
        padding: 0 5px;
    }

    .country-item {
        width: 300px;
        max-width: 300px;

        margin: 5px;
    }
}

